# PackWize

./: .gitignore  Makefile  README.md  add_mod.py  build_pack_content.py  export_modpack.py  go.mod  go.sum  install.ps1  install.sh  main.py  pyproject.toml  refresh_modpack.py  remove_mod.py  requirements.txt  update_modpack_version.py  update_mods.py
.github/workflows/: build.yml  linux.yml
Functions/: add_mod.py  build_pack_content.py  export_modpack.py  refresh_modpack.py  remove_mod.py  update_modpack_version.py  update_mods.py
PackWize/: main.py
PackWize/commands/: accept_version.py  add_mod.py  export_modpack.py  generate_pack_content.py  init_modpack.py  list_modpack.py  migrate.py  pin_mod.py  refresh_modpack.py  remove_mod.py  unpin_mod.py  update_modpack_version.py  update_mods.py  update_packwize.py  url_add.py
PackWize/utils/: better_input.py  convert_arguments.py  get_launcher.py  get_mc_version.py  get_mcv_launchers.py  get_modpack_dir.py  menu.py  run_cmd.py
Utils/: convert_arguments.py  get_launcher.py  get_mc_version.py  get_mcv_launchers.py  get_modpack_dir.py  run_cmd.py
cmd/: accept.go  add.go  export.go  generate_contents.go  init.go  list.go  migrate.go  pin.go  refresh.go  remove.go  root.go  unpin.go  update.go  update_packwize.go  update_version.go  upgrade.go  url.go  url_add.go
cmd/packwize/: main.go
pkg/mods/: accept.go  add.go  export.go  generate_contents.go  init.go  list.go  migrate.go  pin.go  refresh.go  remove.go  unpin.go  update.go  update_packwize.go  update_version.go  upgrade.go  url.go  url_add.go
(+4 files in other folders)
