[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "packwize"
version = "1.5.5"
description = "A CLI/TUI to manage modpacks easier than just using Packwiz. Based on Packwiz"
authors = [{name="Alfakynz"}]
license = {text = "MIT"}

dependencies = [
    "windows-curses; platform_system == 'Windows'",
]

[tool.setuptools.packages.find]
include = ["PackWize", "PackWize.commands", "PackWize.utils"]

[project.scripts]
packwize = "PackWize.main:main"